Settings: Move Theming to settings homepage
* cherry-picked from https://github.com/PixysOS/packages_apps_Settings@8eab284f12401acbd4f8b64d8a17775e41f7163e

Change-Id: Iee80b3cb415313ed25d3da66002cc6a9ed1cc5fa
Signed-off-by: aswin7469 <aswinas@pixysos.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4548,5 +4548,23 @@
         </activity>
 
         <!-- This is the longest AndroidManifest.xml ever. -->
+
+        <!-- Start of our manifest entries -->
+
+       <!-- SkylineUI Themes -->
+       <activity android:name="Settings$StartThemesActivity"
+            android:label="@string/theme_customization_category"
+            android:exported="true"            
+            android:icon="@drawable/ic_homepage_themes">
+            <intent-filter>
+                <action android:name="com.android.settings.action.SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />                
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.skylineui.settings.theme.ThemeSettings" />
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                android:value="true" />
+        </activity>
+
     </application>
 </manifest>
