--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4996,5 +4996,21 @@
         </activity>
 
         <!-- This is the longest AndroidManifest.xml ever. -->
+
+       <!-- SkylineUI Workstation -->
+       <activity android:name="Settings$StartLabActivity"
+            android:label="@string/skylineui_lab_title"
+            android:exported="true"            
+            android:icon="@drawable/ic_skylineui_lab">
+            <intent-filter>
+                <action android:name="com.android.settings.action.SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />                
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.skylineui.settings.laboratory.LabSettings" />
+            <meta-data android:name="com.android.settings.PRIMARY_PROFILE_CONTROLLED"
+                android:value="true" />
+        </activity>
+
     </application>
 </manifest>
